OpenLDAP 2.3 Change Log

OpenLDAP 2.3.19 Engineering
	Fixed slaptools when --disable-debug (ITS#4351)

OpenLDAP 2.3.18 Release
	Fixed slapd syncrepl variable used before set bug (ITS#4331)
	Updated slapd-meta retry capabilities (ITS#4328)
	Fixed slapd-bdb slapcat autorecover bug (ITS#4324)
	Fixed slapo-chain search limits (ITS#4336)
	Fixed slapo-pcache attrsets issues (ITS#4316)
	Fixed slapo-translucent connection destroy (ITS#4334)
	Fixed slapd-config handling of attribute options (ITS#4339)
	Fixed slapd-ldap idassert resource leak (ITS#4326)
	Fixed slapd-meta nretries issue (ITS#4059)
	Fixed slapd wake_listener loses wakes (ITS#4343)
	Fixed slapd connection manager issue (ITS#4338)
	Fixed slapd handling of old style configuration directives (ITS#4341)
	Removed slapd-bdb/hdb extraneous yields (ITS#3950)
	Build Environment
		Removed problematic Linux sched_yield(2) workarounds (ITS#3950)
	Documentation
		Updated release documents
		Updated misc. manual pages

OpenLDAP 2.3.17 Release
	Fixed slapd anonymous proxy authorization issue (ITS#4320)
	Fixed slapd-ldap/meta session reuse issue (ITS#4315)
	Fixed slapd-ldap idassert anon-to-anon issue (ITS#4321)
	Fixed slapd-monitor thread issue (ITS#4318)
	Build environment
		Updated Linux sched_yield(2) workaround to use nanosleep(2) (ITS#3950)
		Fixed configure report-to URL

OpenLDAP 2.3.16 Release
	Fixed slapd-bdb reindexing via cn=config not noticed issue (ITS#4260)
	Fixed slapd-monitor connection search crash (ITS#4300)
	Flapd slapd cn=config bad ACL syntax modify crash (ITS#4306)
	Fixed slapd ACL/suffix configuration issue (ITS#4307)
	Fixed slapd-bdb/hdb cache issue (ITS#4308)
	Fixed slapd-bdb/hdb/ldbm suffix add with default referral issue (ITS#4310)
	Fixed slapd-ldbm compare cache release issue (ITS#4313)
	Fixed slapd syncrepl time/size limit parsing
	Fixed slapi slapi_op_bind_callback fix (ITS#4311)
	Fixed slapi pluginlog fix (ITS#4291)
	Fixed ldapsearch response control handling issue
	Build environment